updating pseudocode and title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HW6 - Weather Dashboard</title>
+    <title>HW6 - Weather Dashboard App</title>
     <!-- link to bootstrap CDN -->
     <link
       rel="stylesheet"
@@ -30,7 +30,7 @@
  <div class="container-fluid">
     <div id="header" class="row">
       <div class="col-md-12">
-        <h1>Weather Dashboard</h1>
+        <h1>Weather Dashboard App</h1>
       </div>
     </div>
     <!-- col for the search parameters -->
